k8s-manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: exam
spec:
  ingressClassName: nginx  # Ingress class
  rules:
  - host: app.test
    http:
      paths:
      - path: /api/  # Matches anything starting with /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8080
      - path: /  # Root path for frontend
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
